html update footer html update

--- a/contact-us.html
+++ b/contact-us.html
@@ -243,7 +243,10 @@
                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                   </div>
                </div>
-               <div class="col-lg-6">
+              
+            </div>
+            <div class="row mt80 align-items-center">
+                <div class="col-lg-6">
                   <div class="contact-info-box">
                      <!-- items -->
                     <div class="contact-info-item d-flex align-items-center">
@@ -280,7 +283,7 @@
                     </div>
                   </div>
                </div>
-               <div class="col-lg-6 order-xl-2 order-2 mb-5 mb-xl-0">
+               <div class="col-lg-6">
                   <div class="contact-form">
                      <form>
                         <div class="row">
