deposit page add

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
          />
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
+      <link rel="stylesheet" href="assets/css/common.css" />
       <link rel="stylesheet" href="assets/css/style.css" />
       <link rel="stylesheet" href="assets/css/responsive.css" />
    </head>
    <body>
-    
       <header class="header-transparent">
          <nav class="navbar navbar-expand-xl">
             <div class="container position-relative">
@@ -171,7 +171,7 @@
                         <ul class="d-flex align-items-center">
                            <li class="d-flex"><a href="#" class="primary-btn">Register</a
                               ></li>
-                           <li class="d-flex"><a href="#" class="primary-btn primary-btn-bg-transparent">Login</a
+                           <li class="d-flex"><a href="#" class="primary-btn-bg-transparent">Login</a
                               ></li>
                            <li class="nav-item dropdown country-menu-parent large-view">
                               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
@@ -242,7 +242,7 @@
                      <div class="btn-group">
                         <ul class="d-flex align-items-center">
                            <li class="d-flex"><a href="#" class="primary-btn">Register Now</a></li>
-                           <li class="d-flex"><a href="#" class="primary-btn primary-btn-bg-transparent">Try Free Demo</a></li>
+                           <li class="d-flex"><a href="#" class="primary-btn-bg-transparent">Try Free Demo</a></li>
                         </ul>
                      </div>
                   </div>
@@ -263,7 +263,7 @@
                      <div class="common-heading-area">
                         <span>WEB PLATFORM</span>
                         <h3>Customer Satisfaction, Our Primary Goal</h3>
-                        <p class="mb12">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        <p class="mb-10">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                         </p>
                         <p>
                             adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -808,7 +808,7 @@
                         </ul>
                      </div>
                      <div class="plan-footer">
-                        <a href="#" class="primary-btn primary-btn-bg-transparent">Get Started</a>
+                        <a href="#" class="primary-btn-bg-transparent">Get Started</a>
                      </div>
                   </div>
                </div>
