--- a/kyc.html
+++ b/kyc.html
@@ -13,6 +13,7 @@
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
          />
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
+      <link rel="stylesheet" href="assets/css/common.css" />
       <link rel="stylesheet" href="assets/css/style.css" />
       <link rel="stylesheet" href="assets/css/responsive.css" />
    </head>
@@ -233,7 +234,7 @@
       </header>
       <!-- <div class="divider"></div> -->
      
-      <section class="common-page-heading-section ptb100" style="background: url('assets/images/bg/contact-page-bg.png');">
+      <section class="common-page-heading-section" style="background: url('assets/images/bg/contact-page-bg.png');">
          <div class="container">
             <div class="row align-items-center">
                <div class="col-lg-12">
