--- a/deposits-withdrawals.html
+++ b/deposits-withdrawals.html
@@ -843,6 +843,7 @@
                      <p>Easily deposit funds with a quick, three-step process designed for convenience, speed, and secure transactions. </p>
                   </div>
                   <div class="step-item-box mt-30">
+                     <!-- item -->
                      <div class="step-item d-flex">
                         <div class="step-number">
                           Step <br> 1
@@ -852,6 +853,27 @@
                            <p>Download the app or click Open account bellow and register. Then, proceed to our swift verification process.</p>
                         </div>
                      </div>
+                      <!-- item -->
+                     <div class="step-item d-flex">
+                        <div class="step-number">
+                          Step <br> 2
+                        </div>
+                        <div class="step-content">
+                           <h4>Choose Preferred Payment Method</h4>
+                           <p>Click the Deposit button to view both global and local ways to deposit.</p>
+                        </div>
+                     </div>
+                      <!-- item -->
+                     <div class="step-item d-flex">
+                        <div class="step-number">
+                          Step <br> 1
+                        </div>
+                        <div class="step-content">
+                           <h4>Verify Your Account</h4>
+                           <p>Download the app or click Open account bellow and register. Then, proceed to our swift verification process.</p>
+                        </div>
+                     </div>
+                     
                   </div>
                </div>
             </div>
