--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     <div class="col-megamenu border-0">
                                        <h4>Our best spared and condition!</h4>
                                        <a href="#" class="primary-btn">Explore Now</a>
-                                       <img src="assets/images/thumnails/1.png" alt="icon">
+                                       <img src="assets/images/thumbnails/1.png" alt="icon">
                                     </div>
                                  </div>
                               </div>
@@ -249,13 +249,13 @@
                </div>
             </div>
          </div>
-         <div class="hero-area-thumnails">
-            <img src="assets/images/thumnails/hero.webp" alt="img">
+         <div class="hero-area-thumbnails">
+            <img src="assets/images/thumbnails/hero.webp" alt="img">
          </div>
       </section>
       <!-- End hero area -->
        <!-- Start customer satisfaction -->
-        <section class="customer-satisfaction-serction pt120">
+        <section class="customer-satisfaction-section pt120">
          <div class="container">
             <div class="row">
                <div class="col-lg-6">
@@ -274,7 +274,7 @@
                </div>
                <div class="col-lg-6">
                   <div class="customer-satisfaction-chart">
-                     <img class="w-100" src="assets/images/thumnails/customer-review.png" alt="img">
+                     <img class="w-100" src="assets/images/thumbnails/customer-review.png" alt="img">
                   </div>
                </div>
             </div>
@@ -316,7 +316,7 @@
                         </div>
                      </div>
                      <div class="market-about-thumbnail">
-                        <img src="assets/images/thumnails/about.png" alt="">
+                        <img src="assets/images/thumbnails/about.png" alt="">
                      </div>
                      <div class="market-terminal-about">
                         <!-- item -->
@@ -581,7 +581,7 @@
                                  <div class="progress-bar buy-down-bg" role="progressbar" style="width:45%;" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                               <div class="trading-thumbnail-img">
-                                 <img src="assets/images/thumnails/trading.png" alt="img">
+                                 <img src="assets/images/thumbnails/trading.png" alt="img">
                               </div>
                            </div>
                         </div>
@@ -904,12 +904,13 @@
         </section>
        <!-- End Blog area -->
          <!-- Start app version -->
-        <section class="app-version-section ptb70 mt120">
+        
+        <section class="app-version-section mt120 pt-90">
          <div class="container">
             <div class="row">
                <div class="col-lg-6">
-                  <div class="app-version-thumnail position-relative">
-                     <img src="assets/images/thumnails/mobile-app.png" alt="img" class="position-absolute">
+                  <div class="app-version-thumbnails position-relative lg-mr-22">
+                     <img src="assets/images/thumbnails/mobile-app.png" alt="img" class="position-absolutfe w-100">
                   </div>
                </div>
                <div class="col-lg-6">
@@ -991,13 +992,8 @@
             </div>
          </div>
         </section>
-        <!-- <table>
-    <tr><td>1.1</td><td>1.2</td><td>1.3</td></tr>
-    <tr><td>2.1</td><td>2.2</td><td>2.3</td></tr>
-    <tr><td>3.1</td><td>3.2</td><td>3.3</td></tr>
-</table> -->
         <!-- Start legal info -->
-         <section class="site-legal-info pt120">
+         <section class="site-legal-info mt-100">
             <div class="container">
                <div class="row">
                <div class="col-md-12">
@@ -1017,7 +1013,7 @@
          </section>
         <!-- End legal info -->
         <!-- End app version -->
-         <section class="more-faq-section pt120">
+         <section class="more-faq-section mt-100">
             <div class="container">
                <div class="row">
                   <div class="col-lg-6">
@@ -1026,7 +1022,7 @@
                             <h3>Looking for More Details?</h3>
                             <p>We're here to help with all the details you need. Contact us for comprehensive answers and support.</p>
                         </div>
-                        <img src="assets/images/thumnails/faq.png" alt="faq" class="mt30 w-100">
+                        <img src="assets/images/thumbnails/faq.png" alt="faq" class="mt30 w-100">
                      </div>
                   </div>
                   <div class="col-lg-6">
