--- a/see-all-conditions.html
+++ b/see-all-conditions.html
@@ -234,7 +234,7 @@
        <section class="common-page-heading-section" style="background-image:url('assets/images/bg/contact-page-bg.png');">
          <div class="container">
             <div class="row text-center">
-               <div class="offset-lg-2 col-lg-8">
+               <div class="offset-md-2 col-md-8">
                   <div class="common-heading-area withdrawals-common-heading mt-40">
                      <h2>Market Terms Explained
                       </h2>
