--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
         <!-- Start trading area -->
          <section class="master-trading-area mt-100">
             <div class="container">
-                <div class="row gy-4">
+                <div class="row gy-4 align-items-center">
                      <div class="col-xl-7">
                         <div class="master-trading-info-box mr22">
                            <div class="common-heading-area">
@@ -1011,75 +1011,7 @@
             </div>
          </section>
         <!-- End legal info -->
-        <!-- End app version -->
-         <section class="more-faq-section mt-100">
-            <div class="container">
-               <div class="row">
-                  <div class="col-lg-6">
-                     <div class="more-faq-heading mr22">
-                        <div class="common-heading-area">
-                            <h3>Looking for More Details?</h3>
-                            <p>We're here to help with all the details you need. Contact us for comprehensive answers and support.</p>
-                        </div>
-                        <img src="assets/images/thumbnails/faq.png" alt="faq" class="mt30 w-100">
-                     </div>
-                  </div>
-                  <div class="col-lg-6">
-                     <div class="accordion more-details-accordion" id="accordionExample">
-                        <div class="accordion-item">
-                           <h2 class="accordion-header" id="headingOne">
-                              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              How do I open a trading account?
-                              </button>
-                           </h2>
-                           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                                 <p>Register on our site, provide necessary documents, and verify your identity to activate your account.</p>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="accordion-item">
-                           <h2 class="accordion-header" id="headingTwo">
-                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                              What types of assets can I trade?
-                              </button>
-                           </h2>
-                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, iste animi illo eos, omnis deleniti dolor dolore necessitatibus, harum nemo laboriosam corporis. Recusandae, excepturi? Natus repellat non voluptatum accusamus. Suscipit.</p>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="accordion-item">
-                           <h2 class="accordion-header" id="headingThree">
-                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                              What is the minimum deposit required?
-                              </button>
-                           </h2>
-                           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, iste animi illo eos, omnis deleniti dolor dolore necessitatibus, harum nemo laboriosam corporis. Recusandae, excepturi? Natus repellat non voluptatum accusamus. Suscipit.</p>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="accordion-item">
-                           <h2 class="accordion-header" id="headingThree">
-                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                             How do I withdraw funds?
-                              </button>
-                           </h2>
-                           <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, iste animi illo eos, omnis deleniti dolor dolore necessitatibus, harum nemo laboriosam corporis. Recusandae, excepturi? Natus repellat non voluptatum accusamus. Suscipit.</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>
-      
+        
         <!-- Start Footer area -->
          <footer class="footer-area mt120">
            <div class="container">
