--- a/negative-balance.html
+++ b/negative-balance.html
@@ -19,8 +19,8 @@
    </head>
    <body>
     
-      <header class="header-area header-transparent">
-         <nav class="navbar navbar-expand-lg">
+      <header class="header-transparent">
+         <nav class="navbar navbar-expand-xl">
             <div class="container position-relative">
                <a class="navbar-brand" href="index.html">
                <img src="assets/images/logo.png" alt="logo"/>
@@ -29,7 +29,7 @@
                   <ul class="d-flex align-items-center">
                      <li class="nav-item dropdown mobile-view country-menu-parent  ">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-                        <img src="assets/images/icon/country.png" alt="icon" style="width:44px;">
+                        <img src="assets/images/icon/country.png" alt="icon">
                         <i class="fa-solid fa-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu country-menu" data-simplebar style="max-height: 360px;" data-bs-popper="static" id="scrollbar">
@@ -80,7 +80,7 @@
                      </li>
                      <li>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span><i class="fa-solid fa-bars"></i></span>
                         </button>
                      </li>
                   </ul>
@@ -353,7 +353,7 @@
         </section>
        <!-- End protection measures -->
         <!-- Start legal info -->
-         <section class="site-legal-info ptb120">
+         <section class="site-legal-info mt-100">
             <div class="container">
                <div class="row">
                <div class="col-md-12">
@@ -375,7 +375,7 @@
         <!-- End legal info -->
         
         <!-- Start Footer area -->
-          <footer class="footer-area mt120">
+          <footer class="footer-area mt-100">
            <div class="container">
              <div class="row ptb70">
                <div class="col-md-12 footer-inner d-flex">
