demo account page update

--- a/demo-account.html
+++ b/demo-account.html
@@ -404,7 +404,7 @@
                                           <h3>Learn at your speed</h3>
                                           <p>Master Forex trading at your own pace with our demo account. Develop your strategies, enhance your skills, and build confidence without rushing. It’s an ideal way to practice and prepare for live trading without financial risk.</p>
                                        </div>
-                                       <a href="#" class="primary-btn mt-30">Log inff</a>
+                                       <a href="#" class="primary-btn mt-30">Log in</a>
                                        <img src="assets/images/thumbnails/trading10.png" alt="img" class="w-100 mt-30 rounded">
                                     </div>
                                  </div>
@@ -431,8 +431,8 @@
                                        </div>
                                        <div class="app-download-btn m-0">
                                           <ul>
-                                             <li class="w-50 m-auto m-md-0">
-                                                <a href="#" class="app-btn-blur d-flex align-items-center" style="background-color:rgba(0, 0, 0, 0.9);">
+                                             <li class="m-auto m-md-0">
+                                                <a href="#" class="app-btn-blur d-flex align-items-center justify-content-center" style="background-color:rgba(0, 0, 0, 0.9);">
                                                    <div class="app-download-logo">
                                                       <img src="assets/images/icon/playstore.png" alt="icon">
                                                    </div>
@@ -465,8 +465,8 @@
                                        </div>
                                        <div class="app-download-btn m-0">
                                           <ul>
-                                             <li class="w-50 m-auto m-md-0">
-                                                <a href="#" class="app-btn-blur d-flex align-items-center" style="background-color:rgba(0, 0, 0, 0.9);">
+                                             <li class="m-auto m-md-0">
+                                                <a href="#" class="app-btn-blur d-flex align-items-center justify-content-center" style="background-color:rgba(0, 0, 0, 0.9);">
                                                    <div class="app-download-logo">
                                                       <img src="assets/images/icon/apk.png" alt="icon">
                                                    </div>
@@ -535,8 +535,8 @@
                                        </div>
                                        <div class="app-download-btn m-0">
                                           <ul>
-                                             <li class="w-50 m-auto m-md-0">
-                                                <a href="#" class="app-btn-blur d-flex align-items-center" style="background-color:rgba(0, 0, 0, 0.9);">
+                                             <li class="m-auto m-md-0">
+                                                <a href="#" class="app-btn-blur d-flex align-items-center justify-content-center" style="background-color:rgba(0, 0, 0, 0.9);">
                                                    <div class="app-download-logo">
                                                       <img src="assets/images/icon/playstore.png" alt="icon">
                                                    </div>
@@ -569,8 +569,8 @@
                                        </div>
                                        <div class="app-download-btn m-0">
                                           <ul>
-                                             <li class="w-50 m-auto m-md-0">
-                                                <a href="#" class="app-btn-blur d-flex align-items-center" style="background-color:rgba(0, 0, 0, 0.9);">
+                                             <li class="m-auto m-md-0">
+                                                <a href="#" class="app-btn-blur d-flex align-items-center justify-content-center" style="background-color:rgba(0, 0, 0, 0.9);">
                                                    <div class="app-download-logo">
                                                       <img src="assets/images/icon/apk.png" alt="icon">
                                                    </div>
@@ -639,8 +639,8 @@
                                        </div>
                                        <div class="app-download-btn m-0">
                                           <ul>
-                                             <li class="w-50 m-auto m-md-0">
-                                                <a href="#" class="app-btn-blur d-flex align-items-center" style="background-color:rgba(0, 0, 0, 0.9);">
+                                             <li class="m-auto m-md-0">
+                                                <a href="#" class="app-btn-blur d-flex align-items-center justify-content-center" style="background-color:rgba(0, 0, 0, 0.9);">
                                                    <div class="app-download-logo">
                                                       <img src="assets/images/icon/playstore.png" alt="icon">
                                                    </div>
@@ -673,8 +673,9 @@
                                        </div>
                                        <div class="app-download-btn m-0">
                                           <ul>
-                                             <li class="w-50 m-auto m-md-0">
-                                                <a href="#" class="app-btn-blur d-flex align-items-center" style="background-color:rgba(0, 0, 0, 0.9);">
+                                             <li class="m-auto m-md-0">
+                                                <a href="#" class="app-btn-blur d-flex align-items-center
+                                                justify-content-center" style="background-color:rgba(0, 0, 0, 0.9);">
                                                    <div class="app-download-logo">
                                                       <img src="assets/images/icon/apk.png" alt="icon">
                                                    </div>
