--- a/demo-account.html
+++ b/demo-account.html
@@ -235,7 +235,7 @@
          <div class="container">
             <div class="row align-items-center">
                <div class="col-lg-7">
-                  <div class="common-heading-area withdrawals-common-heading common-heading-mw-70">
+                  <div class="common-heading-area withdrawals-common-heading">
                      <h2>Complimentary <span class="span-color"> Forex Practice </span> Account
                       </h2>
                      <p class="text-white">Enjoy fast, secure deposits and withdrawals with multiple payment options for a smooth trading experience.</p>
