--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <section class="hero-main-area">
          <div class="container">
             <div class="row align-items-center">
-               <div class="col-md-6">
+               <div class="col-md-7 col-lg-6">
                   <div class="section-content-box hero-area-content">
                      <h2>Unlock Your Trade with  <br>
                         <span class="word"> Market Terminal</span> 
