--- a/see-all-instruments.html
+++ b/see-all-instruments.html
@@ -236,7 +236,7 @@
          <div class="container">
             <div class="row align-items-center">
                <div class="col-lg-7">
-                  <div class="common-heading-area withdrawals-common-heading common-heading-mw-70">
+                  <div class="common-heading-area withdrawals-common-heading">
                      <h2>Forex Trading  <span class="span-color">With MT</span>
                       </h2>
                      <p class="text-white">Enjoy fast, secure deposits and withdrawals with multiple payment options for a smooth trading experience.</p>
