--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                                     <div class="col-megamenu m-0">
                                        <h6>Your Finance</h6>
                                        <ul>
-                                          <li><a href="#">Deposit & withdrawals</a></li>
+                                          <li><a href="deposits-withdrawals.html">Deposit & withdrawals</a></li>
                                           <li><a href="#">Payment Option</a></li>
-                                          <li><a href="#">Negative balance</a></li>
+                                          <li><a href="negative-balance.html">Negative balance</a></li>
                                           <li><a href="#">Founds Security</a></li>
                                        </ul>
                                     </div>
@@ -106,9 +106,9 @@
                                     <div class="col-megamenu">
                                        <h6>Trading Condition</h6>
                                        <ul>
-                                          <li><a href="#">Account types</a></li>
-                                          <li><a href="#">Islamic account</a></li>
-                                          <li><a href="#">Demo account</a></li>
+                                          <li><a href="account-types.html">Account types</a></li>
+                                          <li><a href="islamic-account.html">Islamic account</a></li>
+                                          <li><a href="demo-account.html">Demo account</a></li>
                                           <li><a href="#">Spreads & conditions</a></li>
                                           <li><a href="#">Trading advantage</a></li>
                                           <li><a href="#">Why choose us</a></li>
