manual page update

--- a/account-types.html
+++ b/account-types.html
@@ -412,7 +412,7 @@
                             <th class="bg-td1 bg-td-color text-start"><b>Title</b></th>
                             <th class="bg-td-color text-start"><b>MT Trader</b></th>
                             <th class="bg-td-color text-start"><b>Meta Trader 5</b></th>
-                            <th class="bg-td-color text-start"><b>Meta Trader 4</b></th>
+                            <th class="bg-td2 bg-td-color text-start"><b>Meta Trader 4</b></th>
                           </tr>
                         </thead>
                         <tbody>
