--- a/education-manuals.html
+++ b/education-manuals.html
@@ -298,7 +298,7 @@
                                         <th class="bg-td1 bg-td-color text-start"><b>MetaTrader 4</b></th>
                                         <th class="bg-td-color text-start"><b></b></th>
                                         <th class="bg-td-color text-start"><b></b></th>
-                                        <th class="bg-td-color text-start"><b> </b></th>
+                                        <th class="bg-td2 bg-td-color text-start"><b> </b></th>
                                       </tr>
                                     </thead>
                                     <tbody>
@@ -389,7 +389,7 @@
                                         <th class="bg-td1 bg-td-color text-start"><b>MetaTrader 5</b></th>
                                         <th class="bg-td-color text-start"><b></b></th>
                                         <th class="bg-td-color text-start"><b></b></th>
-                                        <th class="bg-td-color text-start"><b> </b></th>
+                                        <th class="bg-td2 bg-td-color text-start"><b> </b></th>
                                       </tr>
                                     </thead>
                                     <tbody>
