view round results page add (every page table id remove)

--- a/account-types.html
+++ b/account-types.html
@@ -406,7 +406,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="clients-trading-table">
-                     <table id="data-show-table" class="mobile-view-table mt-30">
+                     <table class="data-show-table mobile-view-table mt-30">
                         <thead>
                           <tr>
                             <th class="bg-td1 bg-td-color text-start"><b>Title</b></th>
