--- a/champion-current-round-details.html
+++ b/champion-current-round-details.html
@@ -531,7 +531,7 @@
                         </div>
                         <div class="col-lg-12">
                            <div class="clients-trading-table mt-30">
-                              <table id="data-show-table" class="mobile-view-table">
+                              <table   class="data-show-table mobile-view-table">
                                  <thead>
                                    <tr>
                                      <th class="bg-td1 bg-td-color text-start"><b>Rank</b></th>
