--- a/education-manuals.html
+++ b/education-manuals.html
@@ -292,7 +292,7 @@
                         <div class="row">
                            <div class="col-md-12">
                               <div class="clients-trading-table">
-                                 <table id="data-show-table" class="mobile-view-table">
+                                 <table class="data-show-table mobile-view-table">
                                     <thead>
                                       <tr>
                                         <th class="bg-td1 bg-td-color text-start"><b>MetaTrader 4</b></th>
@@ -383,7 +383,7 @@
                         <div class="row">
                            <div class="col-md-12">
                               <div class="clients-trading-table">
-                                 <table id="data-show-table" class="mobile-view-table">
+                                 <table class="data-show-table mobile-view-table">
                                     <thead>
                                       <tr>
                                         <th class="bg-td1 bg-td-color text-start"><b>MetaTrader 5</b></th>
