--- a/champion-demo-contest-info.html
+++ b/champion-demo-contest-info.html
@@ -288,8 +288,8 @@
                      </div>
                      <div class="col-lg-12 col-md-6">
                         <div class="card-4">
-                           <h6>Duration</h6>
-                           <h4>4 weeks</h4>
+                           <h6>Platform</h6>
+                           <h4>MT4</h4>
                         </div>
                      </div>
                   </div>
@@ -396,7 +396,7 @@
                <div class="col-md-12">
                   <div class="clients-trading-table mt-70">
                      <p>Ends on: Oct 19, 2024 00:00 (EET)</p>
-                     <table id="data-show-table" class="mobile-view-table">
+                     <table class="data-show-table mobile-view-table">
                         <thead>
                           <tr>
                             <th class="bg-td1 bg-td-color text-start"><b>Rank</b></th>
