round result page update

--- a/view-round-results.html
+++ b/view-round-results.html
@@ -280,7 +280,7 @@
              
          </div>
         </section>
-        <div class="withdrawable-prizes-section">
+        <section class="withdrawable-prizes-section">
          <div class="container">
             <div class="row gy-4">
                <div class="col-lg-3">
@@ -313,7 +313,7 @@
                </div>
             </div>
          </div>
-        </div>
+        </section>
         <!-- round list -->
         <section class="round-archive-item-section mt-50">
          <div class="container">
