new page add css update

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
                </div>
                <div class="col-md-6">
                   <div class="blog-all-view text-md-end">
-                     <a href="#" class="primary-btn">View More Blog</a>
+                     <a href="blog.html" class="primary-btn">View More Blog</a>
                   </div>
                </div>
             </div>
@@ -871,7 +871,7 @@
                      <div class="card-body">
                         <h5 class="card-title">Ease Of Doing Business</h5>
                         <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
-                        <a href="#">Learn More</a>
+                        <a href="blog-details.html">Learn More</a>
                      </div>
                      </div>
                   </div>   
@@ -883,7 +883,7 @@
                      <div class="card-body">
                         <h5 class="card-title">Ease Of Doing Business</h5>
                         <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
-                        <a href="#">Learn More</a>
+                        <a href="blog-details.html">Learn More</a>
                      </div>
                      </div>
                   </div>
@@ -900,7 +900,7 @@
                         <p>
                            Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking,
                         </p>
-                        <a href="#">Learn More</a>
+                        <a href="blog-details.html">Learn More</a>
                      </div>
                      </div>
                   </div>
