--- a/trading-tools.html
+++ b/trading-tools.html
@@ -394,9 +394,9 @@
                   <div class="timezone-tab-btn">
                      <div class="row align-items-center gy-3 mt-50">
                         <div class="col-md-6">
-                           <h5>Choose the timezone</h5>
+                           <h5 class="text-center text-md-start">Choose the timezone</h5>
                         </div>
-                        <div class="col-md-6 text-end">
+                        <div class="col-md-6 text-center text-md-end">
                            <div class="app-version-btn">
                               <ul class="d-flex align-items-center m-0">
                                  <li class="time-zone-btn" onclick="timezone(event, 'timezone_trader_utc')" id="time-zone-btn-open">UTC</li>
