--- a/blog.html
+++ b/blog.html
@@ -312,8 +312,8 @@
                      <div class="card">
                      <img src="assets/images/blog/blog6.png" class="card-img-top w-100" alt="blog-image">
                      <div class="card-body">
-                        <h5 class="card-title">Simplify investing with Market Terminal</h5>
-                        <p class="card-text"> Market Terminal streamlines your trading with user-friendly platforms, competitive conditions, & powerful tools for effective investing.
+                        <h5 class="card-title">Simplify investing with markets terminal</h5>
+                        <p class="card-text"> markets terminal streamlines your trading with user-friendly platforms, competitive conditions, & powerful tools for effective investing.
                         </p>
                         <a href="blog-details.html">Learn More</a>
                      </div>
@@ -478,7 +478,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">market terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
