--- a/forex-basics-videos.html
+++ b/forex-basics-videos.html
@@ -676,8 +676,8 @@
             <div class="row align-items-center gy-4">
                <div class="col-md-7">
                   <div class="common-heading-area">
-                     <h3>Market Terminal Gives You Advantage</h3>
-                     <p>Gain a competitive edge with Market Terminal’s advanced tools and insights, helping you trade smarter and more effectively.</p>
+                     <h3>markets terminal Gives You Advantage</h3>
+                     <p>Gain a competitive edge with markets terminal’s advanced tools and insights, helping you trade smarter and more effectively.</p>
                   </div>
                </div>
                <div class="col-md-5 text-center text-md-end">
@@ -800,7 +800,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">market terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
