--- a/account-types.html
+++ b/account-types.html
@@ -239,7 +239,7 @@
                   <div class="common-heading-area withdrawals-common-heading mt-40">
                      <h2>Account Types
                       </h2>
-                     <p class="text-white">Market terminal trading account types offer various features and benefits, catering to diverse trading strategies, experience levels, and asset classes for investors.</p>
+                     <p class="text-white">markets terminal trading account types offer various features and benefits, catering to diverse trading strategies, experience levels, and asset classes for investors.</p>
                      <a href="#" class="primary-btn mt-40">Start trading</a>
                   </div>
                </div>
@@ -254,8 +254,8 @@
             <div class="row align-items-center gy-4">
                <div class="col-md-7">
                   <div class="common-heading-area">
-                     <h3>Market Terminal Trading Account Types</h3>
-                     <p>Market terminal trading account types offer various features and benefits, catering to diverse trading strategies, experience levels, and asset classes for investors.</p>
+                     <h3>markets terminal Trading Account Types</h3>
+                     <p>markets terminal trading account types offer various features and benefits, catering to diverse trading strategies, experience levels, and asset classes for investors.</p>
                   </div>
                </div>
                <div class="col-md-5 text-center text-md-end">
@@ -995,7 +995,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">market terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
