--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                <div class="col-md-7 col-lg-6">
                   <div class="section-content-box hero-area-content">
                      <h2>Unlock Your Trade with  <br>
-                        <span class="word"> Market Terminal</span> 
+                        <span class="word"> markets terminal</span> 
                         <span class="word">Title Here ...</span>
                         <span class="word">Title Here ...</span>
                      </h2>
@@ -1075,7 +1075,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">market terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
