--- a/login.html
+++ b/login.html
@@ -233,7 +233,7 @@
          </nav>
       </header>
       <div class="login-bg">
-         <div class="modal-custom-width page-modal-width mt-100">
+         <div class="modal-custom-width page-modal-width">
             <div class="modal-content custom-modal">
                <form action="">
                   <div class="modal-header-area d-flex align-items-center justify-content-between">
