--- a/callback.html
+++ b/callback.html
@@ -284,7 +284,7 @@
                               <input type="text" class="form-control" id="Email" placeholder="Enter your email">
                         </div>
                         <div class="form-group col-md-12">
-                           <div class="d-flex align-items-center g-20 w-100 flex-wrap flex-md-nowrap">
+                           <!-- <div class="d-flex align-items-center g-20 w-100 flex-wrap flex-md-nowrap">
                               <div class="opening-form-item position-relative md-w-50 w-100">
                                  <label for="start-time">Schedule a call Start</label>
                                  <select name="" id="start-time">
@@ -307,7 +307,34 @@
                                  </select>
                                  <span><i class="fa-solid fa-angle-down"></i></span>
                               </div>
-                           </div>
+                           </div> -->
+                           <div class="schedule-time">
+                              <label for="start-time">Schedule a call</label>
+                              <div class="time-select">
+                                <select id="start-time">
+                                  <option value="00:00">00:00</option>
+                                  <option value="01:00">01:00</option>
+                                  <option value="02:00">02:00</option>
+                                  <option value="03:00">03:00</option>
+                                  <option value="04:00">04:00</option>
+                                  <!-- Add more options as needed -->
+                                  <option value="23:00">23:00</option>
+                                </select>
+                                <span>-</span>
+                                <select id="end-time">
+                                  <option value="00:00">00:00</option>
+                                  <option value="01:00">01:30</option>
+                                  <option value="01:00">01:00</option>
+                                  <option value="01:00">02:40</option>
+                                  <option value="01:00">03:00</option>
+                                  <option value="01:00">04:00</option>
+                                  <option value="01:00">04:00</option>
+                                  <!-- Add more options as needed -->
+                                  <option value="23:00">23:00</option>
+                                </select>
+                              </div>
+                            </div>
+                            
                         </div>
                         <div class="form-group col-md-12">
                            <label for="commentary">Enter your commentary if needed</label>
@@ -400,6 +427,23 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
        <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
       <script src="assets/js/main.js"></script>
-      
+      <script>
+         document.getElementById("start-time").addEventListener("change", function () {
+  const startTime = this.value;
+  const endTimeSelect = document.getElementById("end-time");
+
+  // Disable end times earlier than the selected start time
+  Array.from(endTimeSelect.options).forEach((option) => {
+    option.disabled = option.value <= startTime;
+  });
+});
+
+document.getElementById("end-time").addEventListener("change", function () {
+  const endTime = this.value;
+  console.log(`Start time: ${document.getElementById("start-time").value}`);
+  console.log(`End time: ${endTime}`);
+});
+
+      </script>
    </body>
 </html>
